Fix a crash after D&D of a layer into Krita and adding a mask

The problem happened because the paint device of a pasted layer
belonged to two different images at the same time. And the temporary
image reset the image link during its destruction.

BUG:447126
(cherry picked from commit eae06ae046f65537c3a11577fa586ccf873ef7d1)